# marketplace2gnucash

./: .gitignore  README.md  build.sh  market2gnucash.spec  pyproject.toml
docs/: REFERENCES.md
market2gnucash/: app.py
market2gnucash/core/: __init__.py  book_io.py  carryover_store.py  config_store.py  date_utils.py  decimal_utils.py  dedupe_store.py  gnucash_writer.py  models.py  parsers.py  paths.py  planner.py  rules.py
market2gnucash/ui/: account_picker.py  csv_profile_dialog.py  main_window.py
market2gnucash/ui/tabs/: tab_bank_mapping.py  tab_book.py  tab_import.py  tab_inputs.py  tab_mapping.py  tab_preview.py  tab_settings.py
tests/: test_book_io.py  test_carryover_store.py  test_config_store.py  test_dedupe_store.py  test_gnucash_writer_integration.py  test_parsers.py  test_planner.py  test_rules.py
tools/: build_standalone.py
